# zeugl

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile.am  README.md  Z_IMMUTABLE_PLAN.md  compile_flags.txt  config.h.cmake.in  configure.ac
.github/workflows/: check.yml  cmake.yml  format.yml  immutable.yml
cli/: CMakeLists.txt  Makefile.am  main.c
include/: Makefile.am  zeugl.h
lib/: CMakeLists.txt  Makefile.am  filecopy.c  filecopy.h  immutable.c  immutable.h  immutable_chflags.c  immutable_ioctl.c  immutable_weak.c  logger.c  logger.h  signals.c  signals.h  utils.c  utils.h  wackamole.c  wackamole.h  whackamole.c  whackamole.h  zeugl.c  zeugl.h
man/: Makefile.am  zeugl.1  zeugl.1.in  zopen.3  zopen.3.in
tests/: 02_test.sh  03_test.sh  04_test.sh  05_test.sh  06_test.sh  08_test.sh  09_test.sh  10_test.sh  11_test.sh  12_test.sh  13_test.sh  Makefile.am  multiprocess.sh  multithreaded  multithreaded.c  test_cleanup.c  test_create.sh  test_immutable.sh  test_multiprocess.sh  test_multithreaded.c  testsuite.at
tests/.libs/: multithreaded
